# shovsOS

./: .env.example  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CLAIMS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EVALS.md  EVALUATION.md  GOVERNANCE.md  HARNESS.md  README.md  RESULTS.md  ROADMAP.md  SECURITY.md  SUPPORT.md  docker-compose.dev.yml  docker-compose.yml  mcp_servers.json  package-lock.json  package.json  pyproject.toml  requirements.txt  sessions.db.bak-20260626T042434Z  setup.py  test_ddg.py  test_ddg2.py
.github/: CODEOWNERS  pull_request_template.md
api/: consumer_routes.py  harness_lab.py  log_routes.py  main.py  memory_inspector.py  owner.py  rag_routes.py  voice_endpoint.py  workflow_lab.py
config/: config.py  logger.py  trace_store.py
core/: vault.py
docker/: agent-sandbox.Dockerfile
engine/: candidate_signals.py  circuit_breaker.py  compression_fact_policy.py  context_compiler.py  context_engine.py  context_engine_v2.py  context_engine_v3.py  context_governor.py  context_hygiene.py  context_item_builders.py  context_memory_items.py  context_schema.py  conversation_tension.py  core.py  deterministic_facts.py  direct_fact_policy.py  fact_guard.py  manifest_parser.py  planner_contract.py  response_guard.py  side_effect_guard.py  tokenization.py  tool_contract.py  tool_loop_guard.py
evals/: convergence_eval.py
frontend_consumer/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend_nova/: README.md  index.html  package-lock.json  package.json
frontend_shovs/: README.md  index.html  package-lock.json  vite.config.ts
llm/: adapter_factory.py  anthropic_adapter.py  base_adapter.py  bridge_adapter.py  gemini_adapter.py  (+6 more)
(+256 files in other folders)
